[task 991] fix confirm wrap position [task 1001] optimize layout

--- a/ShowNest.Web/wwwroot/css/_Partial/_SeatSelectionActionBarPartial.css
+++ b/ShowNest.Web/wwwroot/css/_Partial/_SeatSelectionActionBarPartial.css
@@ -117,6 +117,9 @@ h6 {
 }
 
 /* start ---- btn-confirm clicked ---- */
+.seat-areas-and-showcases {
+    position: relative;
+}
 .confirm-wrap {
     position: absolute;
     top: -5px;
